force-app/main/default/objects/Metric_Scorecard_Assignment__c/Metric_Scorecard_Assignment__c.object-meta.xml
<CustomObject>
    <description>Links components to scorecards</description>
    <label>Metric Scorecard Assignment</label>
    <nameField>
        <displayFormat>MSC-{0000}</displayFormat>
        <label>Metric Scorecard Assignment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metric Scorecard Assignment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>