force-app/main/default/objects/Metric_Scorecard_Assignment__c/fields/Goal__c.field-meta.xml
<CustomField>
    <fullName>Goal__c</fullName>
    <label>Goal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>