force-app/main/default/objects/Metric_Scorecard_Assignment__c/fields/Goal_Progress_Cap__c.field-meta.xml
<CustomField>
    <fullName>Goal_Progress_Cap__c</fullName>
    <inlineHelpText>Maximum progress to goal which will be credited in calculating the overall score. If left blank, no cap will apply. This is a percent except for Metric Scorecards with Sum Goal Type.</inlineHelpText>
    <label>Goal Progress Cap</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>