force-app/main/default/objects/Metric_Scorecard_Assignment__c/fields/Goal_Rounding__c.field-meta.xml
<CustomField>
    <fullName>Goal_Rounding__c</fullName>
    <inlineHelpText>This determines how the Current Goal will be rounded</inlineHelpText>
    <label>Goal Rounding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard Rounding</fullName>
                <default>true</default>
                <label>Standard Rounding</label>
            </value>
            <value>
                <fullName>Round Up</fullName>
            </value>
            <value>
                <fullName>Round Down</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>