force-app/main/default/objects/Metric_Scorecard_Assignment__c/fields/Goal_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Goal_Threshold__c</fullName>
    <inlineHelpText>If a value is specified here (or in the Threshold Column Number on the component) then this component will only be included in the Overall Score if the Current Goal has met this threshold</inlineHelpText>
    <label>Goal Threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>