force-app/main/default/objects/Metric_Scorecard_Assignment__c/fields/Green_Percent__c.field-meta.xml
<CustomField>
    <fullName>Green_Percent__c</fullName>
    <label>A Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>