force-app/main/default/objects/Metric_Scorecard_Assignment__c/fields/MeetRequirementsPercent__c.field-meta.xml
<CustomField>
    <fullName>MeetRequirementsPercent__c</fullName>
    <label>C Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>