force-app/main/default/objects/Metric_Scorecard_Assignment__c/fields/Metric_Component__c.field-meta.xml
<CustomField>
    <fullName>Metric_Component__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Metric Component</label>
    <referenceTo>Metric_Component__c</referenceTo>
    <relationshipLabel>Metric Scorecard Assignment</relationshipLabel>
    <relationshipName>Metric_Scorecard_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>