force-app/main/default/objects/Metric_Scorecard_Assignment__c/fields/Metric_Name__c.field-meta.xml
<CustomField>
    <fullName>Metric_Name__c</fullName>
    <formula>IF( RecordType.Id =&apos;0124A000001UTYC&apos;, Scorecard_Rollup__r.Name ,Metric_Component__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Metric Name</label>
    <type>Text</type>
</CustomField>