force-app/main/default/objects/Metric_Scorecard_Assignment__c/fields/Metric_Scorecard__c.field-meta.xml
<CustomField>
    <fullName>Metric_Scorecard__c</fullName>
    <label>Metric Scorecard</label>
    <referenceTo>Metric_Scorecard__c</referenceTo>
    <relationshipLabel>Metric Component Assignments</relationshipLabel>
    <relationshipName>Metric_Scorecard_Assignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>