force-app/main/default/objects/Metric_Scorecard_Assignment__c/fields/Metric_Scorecard_Status__c.field-meta.xml
<CustomField>
    <fullName>Metric_Scorecard_Status__c</fullName>
    <formula>TEXT(Metric_Scorecard__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Metric Scorecard Status</label>
    <type>Text</type>
</CustomField>