force-app/main/default/objects/Metric_Scorecard_Assignment__c/fields/Period_Measured__c.field-meta.xml
<CustomField>
    <fullName>Period_Measured__c</fullName>
    <formula>TEXT(Metric_Component__r.Period_Measured__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Period Measured</label>
    <type>Text</type>
</CustomField>