force-app/main/default/objects/Metric_Scorecard_Assignment__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Role</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select an active role.</errorMessage>
        <filterItems>
            <field>Role__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Role__c</referenceTo>
    <relationshipLabel>Metric Scorecard Assignment</relationshipLabel>
    <relationshipName>Metric_Scorecard_Assignment</relationshipName>
    <type>Lookup</type>
</CustomField>