force-app/main/default/objects/Metric_Scorecard_Assignment__c/fields/Scorecard_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Scorecard_Rollup__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Scorecard Rollup</label>
    <referenceTo>Metric_Scorecard__c</referenceTo>
    <relationshipLabel>Metric Scorecard Rollups</relationshipLabel>
    <relationshipName>Metric_Scorecard_Assignment</relationshipName>
    <type>Lookup</type>
</CustomField>