force-app/main/default/objects/Metric_Scorecard_Assignment__c/fields/Summary_Level__c.field-meta.xml
<CustomField>
    <fullName>Summary_Level__c</fullName>
    <label>Summary Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Grouping</fullName>
                <default>true</default>
                <label>First Grouping</label>
            </value>
            <value>
                <fullName>Second Grouping</fullName>
            </value>
            <value>
                <fullName>Third Grouping</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>