force-app/main/default/objects/Metric_Scorecard_Assignment__c/fields/Uses_Goal_Pacing__c.field-meta.xml
<CustomField>
    <fullName>Uses_Goal_Pacing__c</fullName>
    <formula>Metric_Component__r.Use_Goal_Pacing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Does the component use goal pacing?</inlineHelpText>
    <label>Uses Goal Pacing</label>
    <type>Checkbox</type>
</CustomField>