force-app/main/default/objects/Metric_Scorecard_Assignment__c/fields/Valid__c.field-meta.xml
<CustomField>
    <fullName>Valid__c</fullName>
    <formula>ISBLANK(Scorecard_Rollup__c) ||  Scorecard_Rollup__r.Metric_Count__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This box is checked if this is a regular metric component or a rollup with at least one scorecard assignment</inlineHelpText>
    <label>Valid</label>
    <type>Checkbox</type>
</CustomField>