force-app/main/default/objects/Metric_Scorecard_Assignment__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <label>Weight</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>