force-app/main/default/objects/Metric_Scorecard_Assignment__c/recordTypes/Metric_Component.recordType-meta.xml
<RecordType>
    <fullName>Metric_Component</fullName>
    <active>true</active>
    <description>Takes score for user from report specified in individual component</description>
    <label>Metric Component</label>
</RecordType>