force-app/main/default/objects/Metric_Scorecard_Assignment__c/recordTypes/Scorecard_Rollup.recordType-meta.xml
<RecordType>
    <fullName>Scorecard_Rollup</fullName>
    <active>true</active>
    <description>Rollup score of users reporting to this manager</description>
    <label>Scorecard Rollup</label>
</RecordType>