force-app/main/default/objects/Metric_Scorecard_Assignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>NAME</columns>
    <columns>Metric_Scorecard__c</columns>
    <columns>Order__c</columns>
    <columns>Metric_Component__c</columns>
    <columns>Goal_Progress_Cap__c</columns>
    <columns>Goal_Rounding__c</columns>
    <columns>Summary_Level__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Goal__c</columns>
    <columns>Weight__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Goal_Threshold__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>