force-app/main/default/objects/Metric_Scorecard_Assignment__c/listViews/Rollups.listView-meta.xml
<ListView>
    <fullName>Rollups</fullName>
    <columns>NAME</columns>
    <columns>Metric_Scorecard__c</columns>
    <columns>Scorecard_Rollup__c</columns>
    <columns>Yellow_Percent__c</columns>
    <columns>Green_Percent__c</columns>
    <columns>MeetRequirementsPercent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Metric_Scorecard_Assignment__c.Scorecard_Rollup</value>
    </filters>
    <label>Rollups</label>
</ListView>